添加阿里云身份认证API、完成验证手机号和更改手机号的RequiredAction